2009-01-18  Michael Olson  <mwolson@gnu.org>

	* erc.el (erc-header-line-uses-tabbar-p): Set to nil by default.

2009-01-16  Glenn Morris  <rgm@gnu.org>

	* erc.el (erc-input-message): Conditionalize previous change for XEmacs.

	* erc-dcc.el (erc-dcc-server): Silence warning about obsolete function
	behind fboundp test.

2009-01-09  Glenn Morris  <rgm@gnu.org>

	* erc.el (erc-input-message): Replace last-command-char with
	last-command-event.

2009-01-08  Glenn Morris  <rgm@gnu.org>

	* erc.el (tabbar--local-hlf): Silence compiler.

2009-01-03  Michael Olson  <mwolson@gnu.org>

	* erc.el (erc-user-input): Do not include text properties when
	returning user input.


See ChangeLog.08 for earlier changes.

    Copyright (C) 2009 Free Software Foundation, Inc.

  This file is part of GNU Emacs.

  GNU Emacs is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  GNU Emacs is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with GNU Emacs.  If not, see <http://www.gnu.org/licenses/>.

;; Local Variables:
;; coding: utf-8
;; add-log-time-zone-rule: t
;; End:

;; arch-tag: d4703244-4a8d-49b1-ab34-ad0d56600ef8